Updated base theme. Created header, split menu.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,14 +1,3 @@
-{{- define "main" }}
-<section class="hero is-info">
-    <div class="hero-body">
-        <div class="container">
-            <p class="title">
-                Upcoming news...
-            </p>
-            <p class="subtitle">
-                We'll have more information available soon!
-            </p>
-        </div>
-    </div>
-</section>
-{{- end }}
+{{ define "main" }}
+    <p>No articles have been written yet, check back soon!</p>
+{{ end }}
