--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,52 +2,52 @@
 <html lang="{{ .Site.Params.languageCode | default " en-us " }}">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-  <meta name="theme-color" content="#404040">
-  <meta property="og:title" content="{{ if ne .URL " / " }}{{ .Title }} &middot; {{ end }}{{ .Site.Title }}" />
-  <meta property="og:site_name" content="{{ .Site.Title }}" />
-  <meta property="og:url" content="{{ .Permalink }}" /> {{- if eq .IsPage true }} {{ .Render "meta" }} {{- end }} {{ .Hugo.Generator }}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name="theme-color" content="#404040">
+    <meta property="og:title" content="{{ if ne .URL " / " }}{{ .Title }} &middot; {{ end }}{{ .Site.Title }}" />
+    <meta property="og:site_name" content="{{ .Site.Title }}" />
+    <meta property="og:url" content="{{ .Permalink }}" /> {{- if eq .IsPage true }} {{ .Render "meta" }} {{- end }} {{ .Hugo.Generator }}
 
-  <link rel="icon" href="{{ .Site.BaseURL }}/favicon.ico" />
-  <link rel="shortcut icon" href="{{ .Site.BaseURL }}/favicon.ico" type="image/x-icon" />
-  <link rel="canonical" href="{{ .Permalink }}"> {{ if .RSSLink }}
-  <link href="{{ .Site.BaseURL }}/index.xml" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-  <link href="{{ .Site.BaseURL }}/index.xml" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" /> {{ end }}
+    <link rel="icon" href="{{ .Site.BaseURL }}/favicon.ico" />
+    <link rel="shortcut icon" href="{{ .Site.BaseURL }}/favicon.ico" type="image/x-icon" />
+    <link rel="canonical" href="{{ .Permalink }}"> {{ if .RSSLink }}
+    <link href="{{ .Site.BaseURL }}/index.xml" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+    <link href="{{ .Site.BaseURL }}/index.xml" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" /> {{ end }}
 
-  <title>{{- if not .IsHome }}{{ .Title }} - {{ .Site.Title }}{{- else }}{{ .Site.Title }} - {{ .Site.Params.Tagline }}{{- end}}</title>
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu|Dosis" rel="stylesheet">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css" />
-
-  {{ if eq (getenv "HUGO_ENV") "PRD" }}
-  <meta name="robots" content="noindex,nofollow" />
-  {{ else }}
-  <meta name="robots" content="noindex,nofollow" />
-  {{ end }}
+    <title>{{- if not .IsHome }}{{ .Title }} - {{ .Site.Title }}{{- else }}{{ .Site.Title }} - {{ .Site.Params.Tagline }}{{- end}}</title>
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu|Dosis" rel="stylesheet">
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}/css/style.css" /> {{ if eq (getenv "HUGO_ENV") "PRD" }}
+    <meta name="robots" content="noindex,nofollow" /> {{ else }}
+    <meta name="robots" content="noindex,nofollow" /> {{ end }}
 </head>
 
 <body>
-  {{- if not .IsHome }}
-  {{ partial "menu" . }}
-  {{- else }}
-  {{ partial "header_homepage" . }}
-  {{- end }}
+    {{ partial "navbar" . }}
+    
+    {{- if .IsHome }} {{ partial "header_homepage" . }} {{- end }}
 
-  {{ block "main" . }}{{ end }}
-  
-  <footer class="footer">
-      <div class="container">
-          <div class="content has-text-centered">
-              Copyright © {{ now.Format "2006" }} Yuzu Emulator
-          </div>
-      </div>
-  </footer>
+    <div class="container" style="background-color: white;">
+        <section class="section">
+            <div class="columns">
+                <div class="column is-3">
+                    {{ partial "sidebar" . }}
+                </div>
+                <div class="column is-9">
+                    {{ block "main" . }}{{ end }}
+                </div>
+            </div>
+        </section>
+    </div>
 
-  <script src="{{ .Site.BaseURL }}/js/script.js"></script>
-  
-  <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
-  {{- block "scripts" . }}{{- end }}
+    <footer class="footer container has-text-centered">
+        Copyright © {{ now.Format "2006" }} {{ .Site.Params.ProjectName }}
+    </footer>
+
+    <script src="{{ .Site.BaseURL }}/js/script.js"></script>
+
+    <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script> {{- block "scripts" . }}{{- end }}
 </body>
 
 </html>
