Tweaked list and summary pages. Updated homepage.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,7 +2,9 @@
 {{ $paginator := .Paginate .Data.Pages }}
 
 {{ range $paginator.Pages }}
-    {{ .Render "summary" }}
+    <section class="section">
+        {{ .Render "summary" }}
+    </section>
 {{ end }}
 
 {{ partial "pagination" . }}
