--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -2,17 +2,13 @@
     <div class="card">
         <div class="card-image">
             <figure class="image is-2by1">
-                <img src="{{ .Site.BaseURL }}/images/banners/{{ .Params.Banner | default (print .File.BaseFileName ".png") }}"
-                    alt="Placeholder image">
+                <img src="{{ .Site.BaseURL }}/images/banners/{{ .Params.Banner | default (print .File.BaseFileName " .png ") }}" alt="">
             </figure>
         </div>
+
         <div class="card-content">
-            <div class="media">
-                <div class="media-content">
-                    <p class="title is-4">{{ .Title }}</p>
-                    <p class="subtitle is-6">{{ .Date.Format "January 02 2006" }}</p>
-                </div>
-            </div>
+            <p class="title is-4">{{ .Title }}</p>
+            <p class="subtitle is-6">{{ .Date.Format "January 02 2006" }} by {{ .Params.author }}</p>
 
             <div class="content">
                 {{ .Summary }}
@@ -20,4 +16,3 @@
         </div>
     </div>
 </a>
-<br />
