--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,3 +1,4 @@
-<nav class="navbar is-light is-size-6 is-fixed-top" role="navigation" aria-label="main navigation">
+<nav class="navbar is-dark is-size-6 is-fixed-top" role="navigation" aria-label="main navigation">
     {{ partial "nav_contents" . }}
 </nav>
+
