--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,13 +1,7 @@
 {{ define "main" }}
 <div class="container">
     <section class="section">
-        <div class="columns is-multiline">
-            {{ range sort .Site.Data.twitter "order" }}
-            <div class="column is-one-third">
-                {{ partial "widget/tweet.html" . }}
-            </div>
-            {{ end }}
-        </div>
+        <pre>Cannot find override file: `./layouts/index.html`</pre>
     </section>
 </div>
 {{ end }}
