--- a/layouts/entry/single.html
+++ b/layouts/entry/single.html
@@ -1,13 +1,15 @@
 {{ define "main" }}
-<figure class="image is-2by1">
-    <img src="{{.Permalink}}banner.png" alt="">
-</figure>
+<div class="container">
+    <figure class="image is-2by1">
+        <img src="{{.Permalink}}banner.png" alt="">
+    </figure>
 
-<div class="box">
-    <h1 class="title">{{ .Title }}</h1>
-    <h2 class="subtitle">{{ .Date.Format "January 02 2006" }}</h2>
-    <div class="content">
-        {{ .Content }}
+    <div class="box">
+        <h1 class="title">{{ .Title }}</h1>
+        <h2 class="subtitle">{{ .Date.Format "January 02 2006" }}</h2>
+        <div class="content">
+            {{ .Content }}
+        </div>
     </div>
 </div>
 {{ end }}
