--- a/layouts/partials/layout/navbar_contents.html
+++ b/layouts/partials/layout/navbar_contents.html
@@ -37,6 +37,11 @@
                     <i class="fab fa-2x fa-twitter"></i>
                 </span>
             </a>
+            <a class="navbar-item is-hidden-desktop-only" href="{{ .Site.Params.DiscordURL }}" target="_blank">
+                <span class="icon">
+                    <i class="fab fa-2x fa-discord"></i>
+                </span>
+            </a>
             <a class="navbar-item is-hidden-desktop-only" href="{{ .Site.Params.GithubURL }}" target="_blank">
                 <span class="icon">
                     <i class="fab fa-2x fa-github"></i>
