--- a/layouts/partials/home_hero.html
+++ b/layouts/partials/home_hero.html
@@ -1,5 +1,6 @@
 <section id="homepage-hero" class="hero is-medium is-primary is-bold">
     <div class="hero-head">
+        <!-- is-dark / is-light is set by hero.js for the homepage hero -->
         <nav id="hero-navbar" class="navbar is-size-6 is-fixed-top" role="navigation" aria-label="main navigation">
             {{ partial "layout/navbar_contents" . }}
         </nav>
