--- a/layouts/partials/home_hero.html
+++ b/layouts/partials/home_hero.html
@@ -1,4 +1,4 @@
-<section id="homepage-hero" class="hero is-medium is-primary is-bold">
+<section id="homepage-hero" class="hero is-primary is-bold">
     <div class="hero-head">
         <!-- is-dark / is-light is set by hero.js for the homepage hero -->
         <nav id="hero-navbar" class="navbar is-size-6 is-fixed-top" role="navigation" aria-label="main navigation">
@@ -7,20 +7,27 @@
     </div>
 
     <div class="hero-body">
-        <div class="container">
-            <div class="columns">
-                <!-- Left panel -->
-                <div class="column is-centered-vertically is-5">
-                    {{ partial "home_hero_contents" . }}
-                </div>
+        <section class="section">
+            <div class="container">
+                <!-- is-dark / is-light is set by hero.js for the homepage hero -->
+                <nav id="hero-navbar" class="navbar is-size-6 is-fixed-top" role="navigation" aria-label="main navigation">
+                    {{ partial "layout/navbar_contents" . }}
+                </nav>
 
-                <!-- Right panel -->
-                <div class="column is-7">
-                    <figure class="image is-16by9">
-                        <img src="{{ .Site.BaseURL}}/images/jumbotron.png" />
-                    </figure>
+                <div class="columns">
+                    <!-- Left panel -->
+                    <div class="column is-centered-vertically is-5">
+                        {{ partial "home_hero_contents" . }}
+                    </div>
+
+                    <!-- Right panel -->
+                    <div class="column is-7 is-hidden-mobile">
+                        <figure class="image is-16by9">
+                            <img src="{{ .Site.BaseURL}}/images/jumbotron.png" />
+                        </figure>
+                    </div>
                 </div>
             </div>
-        </div>
     </div>
+    </section>
 </section>
