--- a/layouts/partials/layout/navbar_contents.html
+++ b/layouts/partials/layout/navbar_contents.html
@@ -6,40 +6,37 @@
     </div>
     <div class="navbar-menu">
         <div class="navbar-end">
-            {{ $currentPage := . }}
-            {{ range .Site.Menus.main }}
-                {{ if .HasChildren }}
-                    <div class="navbar-item has-dropdown is-hoverable">
-                            <a class="navbar-item">
-                                {{ .Name }}
-            
-                                <span class="icon">
-                                    <i class="fas fa-caret-down"></i>
-                                </span>
-                            </a>
-                            <div class="navbar-dropdown">
-                                {{ range .Children }}
-                                    <a class="navbar-item {{ if $currentPage.IsMenuCurrent "main" . }} is-active{{ end }}" href="{{ .URL }}">
-                                        {{ .Name }}
-                                    </a>
-                                {{ end }}
-                            </div>
-                        </div>
-                {{ else }}
-                    <a class="navbar-item {{ if $currentPage.IsMenuCurrent "main" . }} is-active{{ end }}" href="{{ .URL }}">
+            {{ $currentPage := . }} {{ range .Site.Menus.main }} {{ if .HasChildren }}
+            <div class="navbar-item has-dropdown is-hoverable">
+                <a class="navbar-item">
+                    {{ .Name }}
+
+                    <span class="icon">
+                        <i class="fas fa-caret-down"></i>
+                    </span>
+                </a>
+                <div class="navbar-dropdown">
+                    {{ range .Children }}
+                    <a class="navbar-item {{ if $currentPage.IsMenuCurrent " main " . }} is-active{{ end }}" href="{{ .URL }}">
                         {{ .Name }}
                     </a>
-                {{ end }}
-            {{ end }}
-            <!-- Navbar icons -->
-            <a class="navbar-item is-hidden-desktop-only" href="{{ .Site.Params.TwitterURL }}" target="_blank">
-                <span class="icon">
-                    <i class="fab fa-2x fa-twitter"></i>
-                </span>
+                    {{ end }}
+                </div>
+            </div>
+            {{ else }}
+            <a class="navbar-item {{ if $currentPage.IsMenuCurrent " main " . }} is-active{{ end }}" href="{{ .URL }}">
+                {{ .Name }}
             </a>
+            {{ end }} {{ end }}
+            <!-- Navbar icons -->
             <a class="navbar-item is-hidden-desktop-only" href="{{ .Site.Params.DiscordURL }}" target="_blank">
                 <span class="icon">
                     <i class="fab fa-2x fa-discord"></i>
+                </span>
+            </a>
+            <a class="navbar-item is-hidden-desktop-only" href="{{ .Site.Params.TwitterURL }}" target="_blank">
+                <span class="icon">
+                    <i class="fab fa-2x fa-twitter"></i>
                 </span>
             </a>
             <a class="navbar-item is-hidden-desktop-only" href="{{ .Site.Params.GithubURL }}" target="_blank">
