--- a/layouts/partials/layout/navbar_contents.html
+++ b/layouts/partials/layout/navbar_contents.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <div class="navbar-menu">
-        <div class="navbar-end">
+        <div class="navbar-start">
             {{ $currentPage := . }} {{ range .Site.Menus.main }} {{ if .HasChildren }}
             <div class="navbar-item has-dropdown is-hoverable">
                 <a class="navbar-item">
@@ -28,6 +28,9 @@
                 {{ .Name }}
             </a>
             {{ end }} {{ end }}
+        </div>
+
+        <div class="navbar-end">
             <!-- Navbar icons -->
             <a class="navbar-item is-hidden-desktop-only" href="{{ .Site.Params.DiscordURL }}" target="_blank">
                 <span class="icon">
