Updated hero and navbar to use SVG. Updated hero right panel to be centered.

--- a/layouts/partials/home_hero.html
+++ b/layouts/partials/home_hero.html
@@ -21,9 +21,9 @@
                     </div>
 
                     <!-- Right panel -->
-                    <div class="column is-7 is-hidden-mobile">
-                        <figure class="image is-16by9">
-                            <img src="{{ .Site.BaseURL}}/images/jumbotron.png" />
+                    <div class="column is-centered-vertically is-7 is-hidden-mobile">
+                        <figure class="image">
+                            <img src="{{ .Site.BaseURL}}/images/jumbotron.svg" />
                         </figure>
                     </div>
                 </div>
