--- a/layouts/partials/layout/navbar_contents.html
+++ b/layouts/partials/layout/navbar_contents.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="navbar-brand">
         <a class="navbar-item" href="{{ .Site.BaseURL }}">
-            <img src="{{ .Site.BaseURL }}/images/menu.png" alt="{{ .Site.Title }} {{ .Site.Params.Tagline }}">
+            <img class="navbar-logo" src="{{ .Site.BaseURL }}/images/menu.svg" alt="{{ .Site.Title }} {{ .Site.Params.Tagline }}">
         </a>
     </div>
     <div class="navbar-menu">
