Temporarily removed /entry/ layout. Updated single to use section container.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,11 +1,10 @@
 {{ define "main" }}
-<div class="container">
-    <div class="box">
+<section class="section">
+    <div class="container">
         <h1 class="title">{{ .Title }}</h1>
-        <h2 class="subtitle">{{ .Date.Format "January 02 2006" }}</h2>
         <div class="content">
             {{ .Content }}
         </div>
     </div>
-</div>
+</section>
 {{ end }}
