--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -43,13 +43,20 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112443698-1"></script>
 
     <script type="text/javascript">
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', '{{ .Site.Params.GoogleAnalyticsTrackingId }}');
-
         (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+    
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        
+        ga('create', '{{ .Site.Params.GoogleAnalyticsTrackingId }}', 'auto');
+        ga('send', 'pageview');
+    </script>
+    <!-- End Google Analytics -->
 
     {{- block "scripts" . }}{{- end }}
 </body>
