--- a/layouts/wiki/single.html
+++ b/layouts/wiki/single.html
@@ -1,3 +1,4 @@
+{{ define "main" }}
 <section class="section">
     <div class="container">
         <h1 class="title">{{ .Title }}</h1>
@@ -17,3 +18,4 @@
         </div>
     </div>
 </section>
+{{ end }}
