--- a/layouts/partials/layout/navbar_contents.html
+++ b/layouts/partials/layout/navbar_contents.html
@@ -3,8 +3,14 @@
         <a class="navbar-item" href="{{ .Site.BaseURL }}">
             <img class="navbar-logo" src="{{ .Site.BaseURL }}/images/menu.svg" alt="{{ .Site.Title }} {{ .Site.Params.Tagline }}">
         </a>
+
+        <button class="button navbar-burger" data-target="navMenu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
     </div>
-    <div class="navbar-menu">
+    <div class="navbar-menu" id="navMenu">
         <div class="navbar-start">
             {{ $currentPage := . }} {{ range .Site.Menus.main }} {{ if .HasChildren }}
             <div class="navbar-item has-dropdown is-hoverable">
@@ -28,21 +34,31 @@
                 {{ .Name }}
             </a>
             {{ end }} {{ end }}
+
+            <a class="navbar-item is-hidden-desktop" href="{{ .Site.Params.DiscordURL }}" target="_blank">
+                discord
+            </a>
+            <a class="navbar-item is-hidden-desktop" href="{{ .Site.Params.TwitterURL }}" target="_blank">
+                twitter
+            </a>
+            <a class="navbar-item is-hidden-desktop" href="{{ .Site.Params.GithubURL }}" target="_blank">
+                github
+            </a>
         </div>
 
         <div class="navbar-end">
             <!-- Navbar icons -->
-            <a class="navbar-item is-hidden-desktop-only" href="{{ .Site.Params.DiscordURL }}" target="_blank">
+            <a class="navbar-item is-hidden-touch" href="{{ .Site.Params.DiscordURL }}" target="_blank">
                 <span class="icon">
                     <i class="fab fa-2x fa-discord"></i>
                 </span>
             </a>
-            <a class="navbar-item is-hidden-desktop-only" href="{{ .Site.Params.TwitterURL }}" target="_blank">
+            <a class="navbar-item is-hidden-touch" href="{{ .Site.Params.TwitterURL }}" target="_blank">
                 <span class="icon">
                     <i class="fab fa-2x fa-twitter"></i>
                 </span>
             </a>
-            <a class="navbar-item is-hidden-desktop-only" href="{{ .Site.Params.GithubURL }}" target="_blank">
+            <a class="navbar-item is-hidden-touch" href="{{ .Site.Params.GithubURL }}" target="_blank">
                 <span class="icon">
                     <i class="fab fa-2x fa-github"></i>
                 </span>
