--- a/layouts/wiki/single.html
+++ b/layouts/wiki/single.html
@@ -1,19 +1,15 @@
 {{ define "main" }}
 <section class="section">
     <div class="container">
+        <article class="message">
+            <div class="message-body">
+                <p>The below wiki article is based on user submitted content. Please verify <strong>all</strong> hyperlinks and terminal commands below!</p>
+                <p>See a mistake? Want to contribute? <a href="{{ .Site.Params.GithubURL }}/wiki/{{ .File.BaseFileName }}/_edit/">Edit this article on Github</a></p>
+            </div>
+        </article>
+
         <h1 class="title">{{ .Title }}</h1>
         <div class="content">
-
-            <article class="message is-primary">
-                <div class="message-body">
-                    <p>The below wiki article is based on user submitted content.</p>
-                    <p>Please verify
-                        <strong>all</strong> hyperlinks and terminal commands below!</p>
-                    See a mistake? Want to contribute?
-                    <a href="{{ .Site.Params.GithubURL }}/wiki/{{ .File.BaseFileName }}/_edit/">Edit this article on Github</a>
-                </div>
-            </article>
-
             {{ .Content }}
         </div>
     </div>
