--- a/layouts/partials/home_hero.html
+++ b/layouts/partials/home_hero.html
@@ -23,11 +23,11 @@
                     <!-- Right panel -->
                     <div class="column is-centered-vertically is-7 is-hidden-mobile">
                         <figure class="image">
-                            <img src="{{ .Site.BaseURL}}/images/jumbotron.svg" />
+                            {{ partial "jumbotron.html" . }}
                         </figure>
                     </div>
                 </div>
             </div>
+        </section>
     </div>
-    </section>
 </section>
