Fix multiple navbars, invalid burger

--- a/layouts/partials/layout/navbar_contents.html
+++ b/layouts/partials/layout/navbar_contents.html
@@ -4,11 +4,11 @@
             <img class="navbar-logo" src="{{ .Site.BaseURL }}/images/menu.svg" alt="{{ .Site.Title }} {{ .Site.Params.Tagline }}">
         </a>
 
-        <button class="button navbar-burger" data-target="navMenu">
+        <div class="burger navbar-burger" data-target="navMenu">
             <span></span>
             <span></span>
             <span></span>
-        </button>
+        </div>
     </div>
     <div class="navbar-menu" id="navMenu">
         <div class="navbar-start">
