Updated use of new Hugo variable BulmaPrimaryShade.

--- a/layouts/partials/layout/navbar_contents.html
+++ b/layouts/partials/layout/navbar_contents.html
@@ -4,7 +4,7 @@
             <img class="navbar-logo" src="{{ .Site.BaseURL }}/images/menu.svg" alt="{{ .Site.Title }} {{ .Site.Params.Tagline }}">
         </a>
 
-        <div class="burger navbar-burger" data-target="navMenu">
+        <div class="burger navbar-burger {{ .Site.Params.BulmaPrimaryShade }}" data-target="navMenu">
             <span></span>
             <span></span>
             <span></span>
