--- a/layouts/partials/layout/navbar.html
+++ b/layouts/partials/layout/navbar.html
@@ -1,3 +1,3 @@
-<nav class="navbar is-light is-size-6 is-fixed-top" role="navigation" aria-label="main navigation">
+<nav class="navbar {{ .Site.Params.BulmaPrimaryShade }} is-size-6 is-fixed-top" role="navigation" aria-label="main navigation">
     {{ partial "layout/navbar_contents" . }}
 </nav>
