--- a/layouts/wiki/header.html
+++ b/layouts/wiki/header.html
@@ -1,5 +1,4 @@
-{{ define "main" }}
-<section class="section">
+<section class="section" style="padding-bottom: 0px;">
     <div class="container">
         <article class="message">
             <div class="message-body">
@@ -7,11 +6,5 @@
                 <p>See a mistake? Want to contribute? <a href="{{ .Site.Params.GithubURL }}/wiki/{{ .File.BaseFileName }}/_edit/">Edit this article on Github</a></p>
             </div>
         </article>
-
-        <h1 class="title">{{ .Title }}</h1>
-        <div class="content">
-            {{ .Content }}
-        </div>
     </div>
 </section>
-{{ end }}
