--- a/layouts/partials/home_hero.html
+++ b/layouts/partials/home_hero.html
@@ -6,7 +6,7 @@
         </nav>
     </div>
 
-    <div class="hero-body">
+    <div class="hero-body pt-lg pb-xxs">
         <section class="section">
             <div class="container">
                 <div class="columns">
