--- a/layouts/partials/layout/navbarContents.html
+++ b/layouts/partials/layout/navbarContents.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="navbar-brand">
         <a class="navbar-item" href="{{ .Site.BaseURL }}">
-            {{ partial "menu.html" . }}
+            {{ partial "inline/menuSvg" }}
         </a>
 
         <div class="burger navbar-burger {{ .Site.Params.BulmaPrimaryShade }}" data-target="navMenu">
@@ -14,7 +14,7 @@
         <div class="navbar-start">
             {{ $currentPage := . }} {{ range .Site.Menus.main }} {{ if .HasChildren }}
             <div class="navbar-item has-dropdown is-hoverable">
-                <a class="navbar-item px-sm">
+                <a class="navbar-item px-lg">
                     {{ .Name }}
 
                     <span class="icon">
@@ -23,14 +23,14 @@
                 </a>
                 <div class="navbar-dropdown">
                     {{ range .Children }}
-                    <a class="navbar-item {{ if $currentPage.IsMenuCurrent " main " . }} is-active{{ end }}" href="{{ .URL }}">
+                    <a class="navbar-item{{ if $currentPage.IsMenuCurrent "main" . }} is-active{{ end }}" href="{{ .URL }}">
                         {{ .Name }}
                     </a>
                     {{ end }}
                 </div>
             </div>
             {{ else }}
-            <a class="navbar-item px-md {{ if $currentPage.IsMenuCurrent " main " . }} is-active{{ end }}" href="{{ .URL }}">
+            <a class="navbar-item px-lg{{ if $currentPage.IsMenuCurrent "main" . }} is-active{{ end }}" href="{{ .URL }}">
                 {{ .Name }}
             </a>
             {{ end }} {{ end }}
@@ -48,17 +48,17 @@
 
         <div class="navbar-end">
             <!-- Navbar icons -->
-            <a class="navbar-item px-md is-hidden-touch" href="{{ .Site.Params.DiscordURL }}" target="_blank">
+            <a class="navbar-item px-lg is-hidden-touch" href="{{ .Site.Params.DiscordURL }}" target="_blank">
                 <span class="icon">
                     <i class="fab fa-2x fa-discord"></i>
                 </span>
             </a>
-            <a class="navbar-item px-md is-hidden-touch" href="{{ .Site.Params.TwitterURL }}" target="_blank">
+            <a class="navbar-item px-lg is-hidden-touch" href="{{ .Site.Params.TwitterURL }}" target="_blank">
                 <span class="icon">
                     <i class="fab fa-2x fa-twitter"></i>
                 </span>
             </a>
-            <a class="navbar-item px-md is-hidden-touch" href="{{ .Site.Params.GithubURL }}" target="_blank">
+            <a class="navbar-item px-lg is-hidden-touch" href="{{ .Site.Params.GithubURL }}" target="_blank">
                 <span class="icon">
                     <i class="fab fa-2x fa-github"></i>
                 </span>
