--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,11 +11,14 @@
     <meta property="og:site_name" content="{{ .Site.Title }}" />
     <meta property="og:url" content="{{ .Permalink }}" />
 
-    {{- if eq .IsPage true }}
-    <meta property="og:description" content="{{ with .Description }}{{ . }}{{ else }}{{ .Summary }}{{ end }}" />
-    <meta name="description" content="{{ with .Description }}{{ . }}{{ else }}{{ .Summary }}{{ end }}" />
-    <meta property="og:type" content="website" />    
-    {{- end }}
+    {{ if .IsHome }}
+        <meta property="og:description" content="{{ .Summary }}" />
+        <meta name="description" content="{{ .Summary }}" />
+        <meta property="og:type" content="website" />
+        <meta property="og:image" content="{{ .Site.BaseURL }}/images/logo.png" />
+    {{ else if .IsPage }}
+        {{ .Render "meta" }}
+    {{ end }}
 
     <link rel="icon" href="{{ .Site.BaseURL }}/favicon.ico" />
     <link rel="shortcut icon" href="{{ .Site.BaseURL }}/favicon.ico" type="image/x-icon" />
@@ -55,7 +58,11 @@
     {{ block "header" . }}{{ end }}
 
     {{ $full_width := .Params.FullWidth | default false }}
-    {{ if eq $full_width true }}
+    {{- if .IsHome }}
+        <div class="container">
+            {{ block "main" . }}{{ end }}
+        </div>
+    {{ else if eq $full_width true }}
         <div class="container">
             {{ block "main" . }}{{ end }}
         </div>
@@ -74,7 +81,7 @@
 
     <div class="container">
         <footer class="footer">
-            {{ partial "layout/footer_contents.html" . }}
+            {{ partial "layout/footerContents" . }}
         </footer>
     </div>
 
