--- a/layouts/entry/single.html
+++ b/layouts/entry/single.html
@@ -1,37 +1,30 @@
 {{ define "header" }}
 {{ $author := index .Site.Data.authors ( .Params.author | default "" ) }}
 <div class="container">
-    <div>
-        <div class="blog-entry-header-image is-3by1" style="background-image: url('./banner.png')">
-            &nbsp;
+    <div class="mb-md blog-entry-header single" style="background-image: url('{{ .Site.BaseURL }}/{{ .Dir }}banner.png')" data-href="{{ .Permalink }}">
+        <div>
+            <span class="title px-md py-sm has-background-dark">{{ .Title }}</span>
         </div>
-        <div class="blog-entry-header-content is-3by1">
-            <div style="position: absolute; bottom: 3em;">
-                <div>
-                    <span class="title px-md py-sm has-background-dark">{{ .Title }}</span>
-                </div>
-                {{ if $author }}
-                <div style="padding-top: 2em;">
-                    <span class="h3 px-md py-sm has-background-dark">
-                        Written by <a href="https://community.citra-emu.org/users/{{ $author.key }}">{{ $author.name }}</a> 
-                        on {{ .Date.Format "January 02 2006" }}
-                    </span> 
-                </div>
-                {{ else }}
-                <div style="padding-top: 2em;">
-                        <span class="h3 px-md py-sm has-background-dark">
-                            Written on {{ .Date.Format "January 02 2006" }}
-                        </span>
-                    </div>
-                {{ end }}
-            </div>
+        {{ if $author }}
+        <div class="mt-lg">
+            <span class="h3 px-md py-sm has-background-dark">
+                Written by <a href="https://community.citra-emu.org/users/{{ $author.key }}">{{ $author.name }}</a> 
+                on {{ .Date.Format "January 02 2006" }}
+            </span> 
         </div>
+        {{ else }}
+        <div>
+            <span class="h3 px-md py-sm has-background-dark">
+                Written on {{ .Date.Format "January 02 2006" }}
+            </span>
+        </div>
+        {{ end }}
     </div>
 </div>
 {{ end }}
 
 {{ define "main" }}
-<div class="content pt-lg">
+<div class="content pt-sm">
     {{ .Content }}
 </div>
 
