--- a/layouts/entry/single.html
+++ b/layouts/entry/single.html
@@ -1,7 +1,7 @@
 {{ define "header" }}
 {{ $author := index .Site.Data.authors ( .Params.author | default "" ) }}
 <div class="container">
-    <div class="mb-md blog-entry-header single" style="background-image: url('{{ .Site.BaseURL }}/{{ .Dir }}banner.png')" data-href="{{ .Permalink }}">
+    <div class="mb-md blog-entry-header single" style="background-image: url('{{ .Site.BaseURL }}/{{ .Dir }}banner.png')">
         <div>
             <span class="title px-md py-sm has-background-dark">{{ .Title }}</span>
         </div>
